# wikitools

./: .gitignore  Cargo.toml  README.md  config.example.toml
core/: Cargo.toml
core/src/: bisect.rs  indices.rs  lib.rs  multistream.rs  utils.rs
src/: extract.rs  extract_anchors.rs  extract_redirects.rs  find_indices.rs  indices.rs  lib.rs  loaders.rs  main.rs  settings.rs  siteinfo.rs  surface_forms.rs  templates.rs  utils.rs
src/page/: anchor.rs  category.rs  iter.rs  mod.rs  page.rs  writer.rs
src/redirect/: mod.rs
src/template/: extract.rs  mod.rs  template.rs  writer.rs
storage/: Cargo.toml  anchor_counts.rs
storage/src/: backend.rs  backend_rocks.rs  doc.rs  fst.rs  lib.rs  qpt.rs  rocks.rs  surface_form.rs  tantivy.rs  tokenizer.rs  tsv.rs  utils.rs
storage/src/page/: anchor.rs  iter.rs  mod.rs  page.rs  writer.rs
storage/src/redirect/: mod.rs
storage/src/template/: extract.rs  mod.rs  template.rs  writer.rs
tagme/: Cargo.toml
tagme/src/: lib.rs  params.rs  query.rs  query_text.rs  stopwords.rs  tag_me.rs
test_data/: sample-jawiki-latest-pages-articles.xml
