[package]
name = "wikitools"
version = "0.0.0"
authors = ["cthwaite"]
edition = "2018"

[profile.release]
debug = true

[workspace]
members = [
    "storage",
    "tagme",
]

[dependencies]
bzip2 = "0.3.1"
clap = "^2.32"
config = "0.9"
env_logger = "^0.6"
fnv =  "1.0"
fst = "^0.3"
fst-regex = "0.2.2"
lazy_static = "1.1"
log = "^0.4"
pbr = "1.0"
qp-trie = { version = "0.7.3", features = ["serde"] }
rayon = "1.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinners = "1.0"
storage = { path = "./storage" }
tagme = { path = "./tagme" }
tantivy = "^0.9"
quick-xml = "0.13"
zip = "0.4.2"