[package]
name = "wikitools"
version = "0.0.0"
authors = ["cthwaite"]
edition = "2018"

[profile.release]
debug = true

[workspace]
members = [
    "storage",
    "tagme",
    "core",
]

[dependencies]
core = { path = "./core" }
storage = { path = "./storage" }
tagme = { path = "./tagme" }
clap = "^2.32"
env_logger = "^0.6"
fnv =  "1.0"
fst = "^0.3"
fst-regex = "0.2.2"
log = "^0.4"
qp-trie = { version = "0.7.3", features = ["serde"] }
rayon = "1.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
spinners = "1.0"
memmap = "*"
vecdump = { git = "https://github.com/cthwaite/vecdump" }
