[package]
name = "storage"
version = "0.1.0"
authors = ["cthwaite <cthwaite@gmail.co.uk>"]
edition = "2018"

[dependencies]
env_logger = "^0.6"
log = "^0.4"
serde = { version = "1.0", features = ["derive"] }
tantivy = "^0.9"
fst = "^0.3"
fst-regex = "0.2.2"
qp-trie = { version = "0.7.3", features = ["serde"] }
rayon = "1.0"
quick-xml = "0.13"
bzip2 = "0.3.1"
regex = "1.0"
lazy_static = "1.1"
pbr = "1.0"